<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.AnotacaoActivity">

    <TextView
        android:id="@+id/tituloAnotacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anotacao"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTituloAnotacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Título"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloAnotacao" />

    <EditText
        android:id="@+id/txtAnotacao"
        android:layout_width="245dp"
        android:layout_height="110dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center|top"
        android:hint="Insira sua anotação aqui"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAnotacao"
        app:layout_constraintTop_toBottomOf="@+id/lblDescricaoAnotacao" />

    <TextView
        android:id="@+id/txtPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Preview"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvarAnotacao" />

    <Button
        android:id="@+id/btnSalvarAnotacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="saveNoteCLocal"
        android:text="@string/salvar"
        android:backgroundTint="#F44336"
        app:layout_constraintEnd_toStartOf="@+id/btnVoltar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAnotacao" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="retornarActvity"
        android:text="@string/btnVoltar"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSalvarAnotacao"
        app:layout_constraintTop_toBottomOf="@+id/txtAnotacao" />

    <ImageView
        android:id="@+id/imgAnotacao"
        android:layout_width="95dp"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescricaoAnotacao"
        app:srcCompat="@drawable/ic_add_image" />

    <TextView
        android:id="@+id/lblDescricaoAnotacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Insira uma Imagem e sua Anotação"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloAnotacao" />

    <androidx.cardview.widget.CardView
        android:id="@+id/previewCard"
        android:layout_width="377dp"
        android:layout_height="200dp"
        android:elevation="100dp"
        android:visibility="invisible"
        app:cardElevation="100dp"
        app:cardMaxElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPreview"
        app:layout_constraintVertical_bias="0.466">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/previewLocalizacao"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.009"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/previewTituloCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="Título"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toEndOf="@+id/previewImagem"
                app:layout_constraintTop_toBottomOf="@+id/previewLocalizacao" />

            <TextView
                android:id="@+id/previewNomePokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Pokémon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/previewTituloCard"
                app:layout_constraintTop_toBottomOf="@+id/previewLocalizacao" />

            <ImageView
                android:id="@+id/previewImagem"
                android:layout_width="94dp"
                android:layout_height="131dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="274dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previewTituloCard"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/previewAnotacao"
                android:layout_width="234dp"
                android:layout_height="89dp"
                android:layout_marginTop="20dp"
                android:text="Anotação"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/previewTituloCard"
                app:layout_constraintTop_toBottomOf="@+id/previewTituloCard" />

            <TextView
                android:id="@+id/previewDataCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:text="06/07/1991"
                app:layout_constraintBottom_toTopOf="@+id/previewImagem"
                app:layout_constraintEnd_toStartOf="@+id/previewTituloCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previewLocalizacao"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>